--- a/mastodon/.config/docker-example.env
+++ b/mastodon/.config/docker-example.env
@@ -18,20 +18,20 @@ LOCAL_DOMAIN=example.com
 
 # Redis
 # -----
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 # PostgreSQL
 # ----------
-DB_HOST=/var/run/postgresql
-DB_USER=mastodon
-DB_NAME=mastodon_production
+DB_HOST=db
+DB_USER=postgres
+DB_NAME=mastodon
 DB_PASS=
 DB_PORT=5432
 
 # Elasticsearch (optional)
 # ------------------------
-ES_ENABLED=true
+ES_ENABLED=false
 ES_HOST=localhost
 ES_PORT=9200
 # Authentication for ES (optional)
@@ -75,3 +75,9 @@ S3_ALIAS_HOST=files.example.com
 # -----------------------
 IP_RETENTION_PERIOD=31556952
 SESSION_RETENTION_PERIOD=31556952
+
+# Secret values required by ActiveRecord encryption feature
+# Use `bin/rails db:encryption:init` to generate fresh secrets
+ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY=
+ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT=
+ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY=
