fix(n8n): env not found error

--- a/n8n/.config/docker-example.env
+++ b/n8n/.config/docker-example.env
@@ -2,5 +2,5 @@ N8N_HOST=n8n.example.com
 N8N_PORT=5678
 N8N_PROTOCOL=https
 NODE_ENV=production
-WEBHOOK_URL="https://${N8N_URL}/"
+WEBHOOK_URL="https://${N8N_HOST}/"
 GENERIC_TIMEZONE="Asia/Tokyo"
